--- a/gb/10/11/10/n3080682.md
+++ b/gb/10/11/10/n3080682.md
@@ -1,6 +1,6 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/cqksji3539/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/cqksji3539/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/cqksji3539/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/cqksji3539/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/cqksji3539/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/cqksji3539/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/cqksji3539/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/cqksji3539/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/cqksji3539/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/cqksji3539/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/cqksji3539/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/cqksji3539/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/cqksji3539/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/cqksji3539/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/cqksji3539/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/cqksji3539/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/cqksji3539/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/cqksji3539/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/cqksji3539/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/cqksji3539/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/cqksji3539/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/cqksji3539/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/cqksji3539/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/cqksji3539/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/cqksji3539/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/cqksji3539/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/cqksji3539/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/cqksji3539/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/cqksji3539/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/cqksji3539/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/cqksji3539/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/cqksji3539/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/cqksji3539/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/cqksji3539/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/cqksji3539/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/cqksji3539/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/cqksji3539/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/cqksji3539/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/cqksji3539/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/cqksji3539/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/cqksji3539/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/cqksji3539/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/cqksji3539/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/cqksji3539/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/cqksji3539/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/cqksji3539/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/cqksji3539/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>台北平溪．菁桐小镇</h2>
 
 <h6></h6>
@@ -16,18 +16,18 @@
 <tr valign=top>
 <td>
 <div style="line-height: 90%; text-align: center;">
-	</a><br /><span class="bn12">白石脚日式宿舍区。 	</span></div>
+	<ahref=" https://i.epochtimes.com/assets/uploads/2011/02/1011092315582063-450x337.jpg" target="_blank" rel="noreferrer noopener"></a><br /><span class="bn12">白石脚日式宿舍区。 	</span></div>
 </td>
 <td>
 <div style="line-height: 90%; text-align: center;">
-	</a><br /><span class="bn12">白石脚土地公庙（日式宿舍区旁）。</span></div>
+	<ahref=" https://i.epochtimes.com/assets/uploads/2011/02/1011092316012063-450x337.jpg" target="_blank" rel="noreferrer noopener"></a><br /><span class="bn12">白石脚土地公庙（日式宿舍区旁）。</span></div>
 </td>
 </tr>
 </table>
 <p><!-- --></p>
 <p><!--image v 1.5--></p>
 <div style="line-height: 90%; text-align: center;">
-	</a><br /><span class="bn12">菁桐车站</span></div>
+	<ahref=" https://i.epochtimes.com/assets/uploads/2011/02/1011092316032063-450x337.jpg" target="_blank" rel="noreferrer noopener"></a><br /><span class="bn12">菁桐车站</span></div>
 <p><!-- --></p>
 <p>离开日式宿舍，通过水泥石桥，抵达了有“太子宾馆”之称的台阳矿业株式会社招待所。招待所建造于昭和14年（1939），格局恢宏，又极典雅，民国92年（2003）被登录为台北县县定古迹。</p>
 <p>“太子宾馆”曾经寂寥冷清，如今已成为菁桐的热门景点。宾馆附设餐厅，入馆费100元（含饮料及小点），但谢绝十三岁以下的儿童进入参观。我家的太子因而无缘进入太子宾馆参观。但这样也好，入馆费花钱事小，若小东乱闯惹祸，则善后理赔事大。</p>
@@ -40,18 +40,18 @@
 <tr valign=top>
 <td>
 <div style="line-height: 90%; text-align: center;">
-	</a><br /><span class="bn12">小东与菁桐车站。 	</span></div>
+	<ahref=" https://i.epochtimes.com/assets/uploads/2011/02/1011092319542063-450x337.jpg" target="_blank" rel="noreferrer noopener"></a><br /><span class="bn12">小东与菁桐车站。 	</span></div>
 </td>
 <td>
 <div style="line-height: 90%; text-align: center;">
-	</a><br /><span class="bn12">菁桐车站一景。</span></div>
+	<ahref=" https://i.epochtimes.com/assets/uploads/2011/02/1011092319562063-450x337.jpg" target="_blank" rel="noreferrer noopener"></a><br /><span class="bn12">菁桐车站一景。</span></div>
 </td>
 </tr>
 </table>
 <p><!-- --></p>
 <p><!--image v 1.5--></p>
 <div style="line-height: 90%; text-align: center;">
-	</a><br /><span class="bn12">石底大斜坑</span></div>
+	<ahref=" https://i.epochtimes.com/assets/uploads/2011/02/1011092319592063-450x337.jpg" target="_blank" rel="noreferrer noopener"></a><br /><span class="bn12">石底大斜坑</span></div>
 <p><!-- --></p>
 <p>我则趁着这空档时间，独自走往车站对面山坡上的石底煤矿。六年前，第一次来石底煤矿时，矿场仍属于私人产业，未对外开放，石阶通道入口以栅门封住，得偷偷翻过栅栏，才能进入矿区参观。如今已成为矿业博物园区，保存昔日的矿场遗迹，并竖立各种导览资料，以供游客参观。</p>
 <p>即使已来过这里多次，走在石底煤矿的矿区里，荒凉的矿场，破旧的建物，残墙颓圮，斜坑废铁，周遭沧桑的气氛，仍然会让心情阵阵波动。我站在著名的“石底大斜坑”的坑前，望穿入口的铁栅丝网，只见坑内积水成池，深入地下一公里长的坑道如今已成一片水世界。坑口旁的石柱，刻着“昭和十二年三月起工”（1937年）。</p>
@@ -61,18 +61,18 @@
 <tr valign=top>
 <td>
 <div style="line-height: 90%; text-align: center;">
-	</a><br /><span class="bn12">石底煤矿遗迹（一） 	</span></div>
+	<ahref=" https://i.epochtimes.com/assets/uploads/2011/02/1011092320012063-450x337.jpg" target="_blank" rel="noreferrer noopener"></a><br /><span class="bn12">石底煤矿遗迹（一） 	</span></div>
 </td>
 <td>
 <div style="line-height: 90%; text-align: center;">
-	</a><br /><span class="bn12">石底煤矿遗迹（二）</span></div>
+	<ahref=" https://i.epochtimes.com/assets/uploads/2011/02/1011092320042063-450x337.jpg" target="_blank" rel="noreferrer noopener"></a><br /><span class="bn12">石底煤矿遗迹（二）</span></div>
 </td>
 </tr>
 </table>
 <p><!-- --></p>
 <p><!--image v 1.5--></p>
 <div style="line-height: 90%; text-align: center;">
-	</a><br /><span class="bn12">小东观察铁道</span></div>
+	<ahref=" https://i.epochtimes.com/assets/uploads/2011/02/1011092324252063-450x337.jpg" target="_blank" rel="noreferrer noopener"></a><br /><span class="bn12">小东观察铁道</span></div>
 <p><!-- --></p>
 <p>我回到了车站，与老婆孩子会合。离火车到站还有一段时间，我问小东要不要到铁轨去走走。小东心动却不敢行动，认为铁轨是火车走的，担心火车来了怎么办？后来看见有些小朋友也进入铁道拍照及游戏，这才心怀戒慎的踏入铁道。先认真的观察铁道，然后试踩铁轨，确定没事，才放开心情的玩乐。</p>
 <p>终于等到火车到站，这时菁桐车站已挤满等待上车的游客。列车每个车箱都爆满，于是我们只搭一站，从菁桐到平溪，再平溪小逛，然后搭下一班火车返回菁桐。</p>
@@ -81,116 +81,116 @@
 <p>旅记日期：2009.01.03 （写于2009.01.06</p>
 <p><!--image v 1.5--></p>
 <div style="line-height: 90%; text-align: center;">
-	</a><br /><span class="bn12">旅行地图</span></div>
+	<ahref=" https://i.epochtimes.com/assets/uploads/2011/02/1011092342552063-450x287.gif" target="_blank" rel="noreferrer noopener"></a><br /><span class="bn12">旅行地图</span></div>
 <p><!-- --><br />——本文转载自Tony的自然人文旅记http://www.tonyhuang.idv.tw/@</p>
 <p><!--image v 1.5--></p>
 <div style="line-height: 90%; text-align: center;">
-	</a><br /><span class="bn12">白石脚日式宿舍区。</span></div>
+	<ahref=" https://i.epochtimes.com/assets/uploads/2011/02/1011092324302063-450x337.jpg" target="_blank" rel="noreferrer noopener"></a><br /><span class="bn12">白石脚日式宿舍区。</span></div>
 <p><!-- --></p>
 <p><!--image v 1.5--></p>
 <div style="line-height: 90%; text-align: center;">
-	</a><br /><span class="bn12">旧式水泥溜滑梯。 </span></div>
+	<ahref=" https://i.epochtimes.com/assets/uploads/2011/02/1011092324332063-450x600.jpg" target="_blank" rel="noreferrer noopener"></a><br /><span class="bn12">旧式水泥溜滑梯。 </span></div>
 <p><!-- --></p>
 <p><!--image v 1.5--></p>
 <div style="line-height: 90%; text-align: center;">
-	</a><br /><span class="bn12">白石脚土地公庙。 </span></div>
+	<ahref=" https://i.epochtimes.com/assets/uploads/2011/02/1011092324362063-450x600.jpg" target="_blank" rel="noreferrer noopener"></a><br /><span class="bn12">白石脚土地公庙。 </span></div>
 <p><!-- --></p>
 <p><!--image v 1.5--></p>
 <div style="line-height: 90%; text-align: center;">
-	</a><br /><span class="bn12">菁桐车站旁的许愿小竹片。</span></div>
+	<ahref=" https://i.epochtimes.com/assets/uploads/2011/02/1011092331182063-450x337.jpg" target="_blank" rel="noreferrer noopener"></a><br /><span class="bn12">菁桐车站旁的许愿小竹片。</span></div>
 <p><!-- --></p>
 <p><!--image v 1.5--></p>
 <div style="line-height: 90%; text-align: center;">
-	</a><br /><span class="bn12">菁桐车站前的老街（菁桐街）。</span></div>
+	<ahref=" https://i.epochtimes.com/assets/uploads/2011/02/1011092331212063-450x337.jpg" target="_blank" rel="noreferrer noopener"></a><br /><span class="bn12">菁桐车站前的老街（菁桐街）。</span></div>
 <p><!-- --></p>
 <p><!--image v 1.5--></p>
 <div style="line-height: 90%; text-align: center;">
-	</a><br /><span class="bn12">车站对面山坡的选洗煤场（台湾百大历史建筑）。</span></div>
+	<ahref=" https://i.epochtimes.com/assets/uploads/2011/02/1011092331232063-450x337.jpg" target="_blank" rel="noreferrer noopener"></a><br /><span class="bn12">车站对面山坡的选洗煤场（台湾百大历史建筑）。</span></div>
 <p><!-- --></p>
 <p><!--image v 1.5--></p>
 <div style="line-height: 90%; text-align: center;">
-	</a><br /><span class="bn12">石阶路通往石底煤矿。</span></div>
+	<ahref=" https://i.epochtimes.com/assets/uploads/2011/02/1011092331262063-450x600.jpg" target="_blank" rel="noreferrer noopener"></a><br /><span class="bn12">石阶路通往石底煤矿。</span></div>
 <p><!-- --></p>
 <p><!--image v 1.5--></p>
 <div style="line-height: 90%; text-align: center;">
-	</a><br /><span class="bn12">石底煤矿矿场遗迹（一）</span></div>
+	<ahref=" https://i.epochtimes.com/assets/uploads/2011/02/1011092331292063-450x337.jpg" target="_blank" rel="noreferrer noopener"></a><br /><span class="bn12">石底煤矿矿场遗迹（一）</span></div>
 <p><!-- --></p>
 <p><!--image v 1.5--></p>
 <div style="line-height: 90%; text-align: center;">
-	</a><br /><span class="bn12">石底煤矿矿场遗迹（二） </span></div>
+	<ahref=" https://i.epochtimes.com/assets/uploads/2011/02/1011092338162063-450x337.jpg" target="_blank" rel="noreferrer noopener"></a><br /><span class="bn12">石底煤矿矿场遗迹（二） </span></div>
 <p><!-- --></p>
 <p><!--image v 1.5--></p>
 <div style="line-height: 90%; text-align: center;">
-	</a><br /><span class="bn12">石底煤矿矿场遗迹（三）</span></div>
+	<ahref=" https://i.epochtimes.com/assets/uploads/2011/02/1011092338182063-450x337.jpg" target="_blank" rel="noreferrer noopener"></a><br /><span class="bn12">石底煤矿矿场遗迹（三）</span></div>
 <p><!-- --></p>
 <p><!--image v 1.5--></p>
 <div style="line-height: 90%; text-align: center;">
-	</a><br /><span class="bn12">石底大斜坑。</span></div>
+	<ahref=" https://i.epochtimes.com/assets/uploads/2011/02/1011092338212063-450x337.jpg" target="_blank" rel="noreferrer noopener"></a><br /><span class="bn12">石底大斜坑。</span></div>
 <p><!-- --></p>
 <p><!--image v 1.5--></p>
 <div style="line-height: 90%; text-align: center;">
-	</a><br /><span class="bn12">石底大斜坑。</span></div>
+	<ahref=" https://i.epochtimes.com/assets/uploads/2011/02/1011092338232063-450x337.jpg" target="_blank" rel="noreferrer noopener"></a><br /><span class="bn12">石底大斜坑。</span></div>
 <p><!-- --></p>
 <p><!--image v 1.5--></p>
 <div style="line-height: 90%; text-align: center;">
-	</a><br /><span class="bn12">返回菁桐车站。 </span></div>
+	<ahref=" https://i.epochtimes.com/assets/uploads/2011/02/1011092338262063-450x600.jpg" target="_blank" rel="noreferrer noopener"></a><br /><span class="bn12">返回菁桐车站。 </span></div>
 <p><!-- --></p>
 <p><!--image v 1.5--></p>
 <div style="line-height: 90%; text-align: center;">
-	</a><br /><span class="bn12">小东研究铁道。 </span></div>
+	<ahref=" https://i.epochtimes.com/assets/uploads/2011/02/1011092342462063-450x600.jpg" target="_blank" rel="noreferrer noopener"></a><br /><span class="bn12">小东研究铁道。 </span></div>
 <p><!-- --></p>
 <p><!--image v 1.5--></p>
 <div style="line-height: 90%; text-align: center;">
-	</a><br /><span class="bn12">菁桐车站铁轨。</span></div>
+	<ahref=" https://i.epochtimes.com/assets/uploads/2011/02/1011092342492063-450x600.jpg" target="_blank" rel="noreferrer noopener"></a><br /><span class="bn12">菁桐车站铁轨。</span></div>
 <p><!-- --></p>
 <p><!--image v 1.5--></p>
 <div style="line-height: 90%; text-align: center;">
-	</a><br /><span class="bn12">小东摆Pose，与菁桐车站合影留念。</span></div>
+	<ahref=" https://i.epochtimes.com/assets/uploads/2011/02/1011092342522063-450x600.jpg" target="_blank" rel="noreferrer noopener"></a><br /><span class="bn12">小东摆Pose，与菁桐车站合影留念。</span></div>
 <p><!-- --></p>
 <p><!--image v 1.5--></p>
 <div style="line-height: 90%; text-align: center;">
-	</a><br /><span class="bn12">旅行地图</span></div>
+	<ahref=" https://i.epochtimes.com/assets/uploads/2011/02/1011092342552063-450x287.gif" target="_blank" rel="noreferrer noopener"></a><br /><span class="bn12">旅行地图</span></div>
 <p><!-- --></p>
 	
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/cqksji3539/djy/blob/master/gb/10/10/19/n3058934.md#1">基隆市．松山、八堵、基隆火车站</a></li>
-<li><a href="https://github.com/cqksji3539/djy/blob/master/gb/10/10/27/n3066699.md#1">岁末回想七年旅记的回顾与自赏（中）</a></li>
-<li><a href="https://github.com/cqksji3539/djy/blob/master/gb/20/12/18/n12630523.md#1">热带南国圣诞风情 到台湾屏东公园追极光</a></li>
-<li><a href="https://github.com/cqksji3539/djy/blob/master/gb/20/9/22/n12422503.md#1">瓜地马拉 色彩丰富的美景天堂</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/10/19/n3058934.md#1">基隆市．松山、八堵、基隆火车站</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/10/27/n3066699.md#1">岁末回想七年旅记的回顾与自赏（中）</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/6/n13625736.md#1">台80多年老烟厂再造 PT1936文化体验</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/2/26/n13607236.md#1">台北内湖乐活公园樱花绽放 假日踏青赏樱</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/cqksji3539/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/7/n9812644.md#1" target="_blank">游兆和：从“十月革命”看共产革命本质</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/9/16/n3684317.md#1" target="_blank">我的人生，注定是一场修炼</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a target="_blank" href="https://github.com/upjkzu3674/djy/blob/master/gb/20/2/20/n11884306.md#1">退出无神论组织 做个神佛保佑的人</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/16/n10855894.md#1" target="_blank">绝处逢生 韩国男子见证两个奇迹</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/cqksji3539/djy/blob/master/gb/20/12/30/n12653772.md#1">【命理】相士算他活不过30岁 为何不应验？</a></li>
-<li><a href="https://github.com/cqksji3539/djy/blob/master/gb/21/2/19/n12762219.md#1">解密文件：美CIA或观察到火星上的古代人类</a></li>
-<li><a href="https://github.com/cqksji3539/djy/blob/master/gb/21/2/16/n12755606.md#1">被问到如何经营企业？ 马斯克：我是外星人</a></li>
-<li><a href="https://github.com/cqksji3539/djy/blob/master/gb/21/2/16/n12756200.md#1">《转法轮》中提及的若干史前文明案例（1）</a></li>
-<li><a href="https://github.com/cqksji3539/djy/blob/master/gb/18/3/8/n10200680.md#1">【西游义趣】之二：一个信念贯穿沙僧的前世今生</a></li>
-<li><a href="https://github.com/cqksji3539/djy/blob/master/gb/21/2/20/n12763590.md#1">【有冇搞错】2+2≠4？荒谬教育背后的共产主义</a></li>
-<li><a href="https://github.com/cqksji3539/djy/blob/master/gb/21/2/20/n12764458.md#1">【时事军事】疯狂的核飞机 将被核技术突破唤醒</a></li>
-<li><a href="https://github.com/cqksji3539/djy/blob/master/gb/21/2/22/n12766354.md#1">【拍案惊奇】川普将公开演讲 传15国拟整治脸书</a></li>
-<li><a href="https://github.com/cqksji3539/djy/blob/master/gb/21/2/19/n12763495.md#1">【新闻看点】中印对峙首曝光 印军：中共丢脸</a></li>
-<li><a href="https://github.com/cqksji3539/djy/blob/master/gb/21/2/20/n12763649.md#1">【十字路口】美国台湾需慎防 缅甸政变是陷阱？</a></li>
-<li><a href="https://github.com/cqksji3539/djy/blob/master/gb/21/2/20/n12764532.md#1">前国安部长陷公共情妇案 被从轻发落内幕曝光</a></li>
-<li><a href="https://github.com/cqksji3539/djy/blob/master/gb/21/2/19/n12761987.md#1">41岁赵小侨宣布怀孕 求子路艰辛终如愿</a></li>
-<li><a href="https://github.com/cqksji3539/djy/blob/master/gb/21/2/19/n12763516.md#1">沈殿霞逝世13周年 郑欣宜发长文纪念母亲</a></li>
-<li><a href="https://github.com/cqksji3539/djy/blob/master/gb/21/2/19/n12763226.md#1">刘嘉玲晒与章子怡合照：天涯海角也能相连</a></li>
-<li><a href="https://github.com/cqksji3539/djy/blob/master/gb/21/2/19/n12762275.md#1">旧合约禁韩国Solo 王嘉尔曝GOT7多人准备专辑</a></li>
-<li><a href="https://github.com/cqksji3539/djy/blob/master/gb/21/2/19/n12763107.md#1">被夫要求扯断口罩带子 天心曝背后原因超暖心</a></li>
-<li><a href="https://github.com/cqksji3539/djy/blob/master/gb/21/2/19/n12762219.md#1">解密文件：美CIA或观察到火星上的古代人类</a></li>
-<li><a href="https://github.com/cqksji3539/djy/blob/master/gb/21/2/19/n12762882.md#1">癌症风险降50%！吃7种食物 养出不生病体质</a></li>
-<li><a href="https://github.com/cqksji3539/djy/blob/master/gb/21/2/20/n12764713.md#1">若突发停电 如何安全保存和处理冰箱食物</a></li>
-<li><a href="https://github.com/cqksji3539/djy/blob/master/gb/21/2/16/n12755049.md#1">白米饭补脾胃、稳血糖 糖尿病也能安心吃</a></li>
-<li><a href="https://github.com/cqksji3539/djy/blob/master/gb/21/2/19/n12761953.md#1">美国男子声称UFO降落后院 外星人送他松饼</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688852.md#1">【新闻大家谈】美国2疏忽 中共借机叫板三角联盟</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689405.md#1">【财商天下】水泥地种粮食 中国复耕“大跃进”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13691255.md#1">【拍案惊奇】传中共深改办易主 王沪宁丢两权</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686756.md#1">巨星布鲁斯威利患失语症 医：警惕2大原因</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/cqksji3539/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/cqksji3539/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/10/11/10/n3080682.htm">台北平溪．菁桐小镇</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/10/11/10/n3080682.htm">台北平溪．菁桐小镇</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/cqksji3539/djy/blob/master/gb/10/11/10/n3080682.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/cqksji3539/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqksji3539/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/cqksji3539/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/cqksji3539/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/cqksji3539/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqksji3539/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/cqksji3539/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqksji3539/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/cqksji3539/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqksji3539/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/cqksji3539/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqksji3539/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/cqksji3539/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqksji3539/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/cqksji3539/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqksji3539/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/cqksji3539/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqksji3539/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/cqksji3539/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqksji3539/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/cqksji3539/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqksji3539/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/cqksji3539/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqksji3539/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/cqksji3539/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqksji3539/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/cqksji3539/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqksji3539/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/cqksji3539/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqksji3539/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/cqksji3539/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqksji3539/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/cqksji3539/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqksji3539/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/cqksji3539/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqksji3539/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/cqksji3539/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqksji3539/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/cqksji3539/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqksji3539/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/cqksji3539/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqksji3539/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/cqksji3539/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqksji3539/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/cqksji3539/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqksji3539/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/cqksji3539/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cqksji3539/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/10/11/10/n3080682.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
